--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -13,9 +13,10 @@
     <artifactId>demo</artifactId>
     <dependencies>
         <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-lang3</artifactId>
-            <version>3.12.0</version>
+            <groupId>org.example</groupId>
+            <artifactId>utils</artifactId>
+            <version>1.0-SNAPSHOT</version>
+
         </dependency>
 
         <dependency>
