--- a/utils/pom.xml
+++ b/utils/pom.xml
@@ -10,12 +10,11 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <groupId> stage-2-module-1-build-tools-maven</groupId>
+    <groupId>org.example</groupId>
     <artifactId> utils</artifactId>
-    <version> 1.0-SNAPSHOT</version>
+    <version>1.0-SNAPSHOT</version>
 
     <dependencies>
-        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
