--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -12,11 +12,12 @@
 
     <artifactId>demo</artifactId>
     <dependencies>
+        <!-- something should be here-->
+        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
         <dependency>
-            <groupId>org.example</groupId>
-            <artifactId>utils</artifactId>
-            <version>1.0-SNAPSHOT</version>
-
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.12.0</version>
         </dependency>
 
         <dependency>
