--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -10,10 +10,11 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
+    <groupId>com.epam.utils</groupId>
     <artifactId>demo</artifactId>
+    <version>1.3.5</version>
     <dependencies>
-        <!-- something should be here-->
-        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
+
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
@@ -23,6 +24,12 @@
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-params</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
             <scope>test</scope>
         </dependency>
     </dependencies>
