--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -6,21 +6,18 @@
 
     <parent>
         <artifactId>stage-2-module-1-build-tools-maven</artifactId>
-        <groupId>org.example</groupId>
+        <groupId>com.epam</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <groupId>com.epam.utils</groupId>
     <artifactId>demo</artifactId>
-    <version>1.3.5</version>
+
     <dependencies>
-
         <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-lang3</artifactId>
-            <version>3.12.0</version>
+            <groupId>com.epam</groupId>
+            <artifactId>utils</artifactId>
+            <version>1.3.5</version>
         </dependency>
-
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-params</artifactId>
