--- a/utils/pom.xml
+++ b/utils/pom.xml
@@ -6,16 +6,15 @@
 
     <parent>
         <artifactId>stage-2-module-1-build-tools-maven</artifactId>
-        <groupId>org.example</groupId>
+        <groupId>com.epam</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <groupId>com.epam.utils</groupId>
     <artifactId>utils</artifactId>
     <version>1.3.5</version>
 
     <dependencies>
-        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
+
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
@@ -31,7 +30,6 @@
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
-            <scope>test</scope>
         </dependency>
     </dependencies>
 </project>
